# NumericalPDE

./: .gitignore  Exercises.ipynb  Exercises.py  Exercises_7.ipynb  Exercises_7.py  Poisson1.ipynb  PoissonConvergence.ipynb  README.md  Untitled19.ipynb  requirements.txt  solvers.ipynb
docs/: Advection-Diffusion-1D.md  BC.ipynb
notebooks/: Exercises_7.ipynb  Exercises_7.py
numpde/: list.txt  other.txt  pyproject.toml  requirements.txt
numpde/src/numpde/: __init__.py  cli.py  draft.py
numpde/src/numpde/core/: structures.py
numpde/src/numpde/runners/: poisson.py
numpde/src/numpde/study/: studies.py
numpde/src/numpde/viz/: plots.py
