[project]
name = "numpde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bertold Sedlak", email = "bertold.sedlak@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.8",
    "ngsolve>=6.2.2506",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "ptpython>=3.0.32",
    "scipy>=1.16.3",
    "webgui-jupyter-widgets>=0.2.37",
]

[project.scripts]
numpde = "numpde:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "ruff>=0.14.9",
]
kitty = [
    "matplotlib-backend-kitty>=2.1.2",
]
